--- a/appDev/app6K/app/style/app.scss
+++ b/appDev/app6K/app/style/app.scss
@@ -39,7 +39,8 @@
 
 // ----------------------------------------------- pending
 
-
+@import "app_components/zetka/zetka-formula.scss";
+@import "app_components/zetka/zetka-columns.scss";
 
 
 // grid cases
